Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignNumObjUndefinedField.quorum
class Main
    Number v = Test()
    action Main
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Number
        return undefined
    end
end