Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanUndefinedField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        return undefined
    end
end